--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "koa": "^2.2.0",
     "koa-bodyparser": "^4.2.0",
+    "koa-route": "^3.2.0",
     "koa-router": "^7.2.0",
     "sequelize": "^3.30.4"
   }
