--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "koa-bodyparser": "^4.2.0",
     "koa-route": "^3.2.0",
     "koa-router": "^7.2.0",
-    "sequelize": "^3.30.4"
+    "koa2-cors": "^2.0.3",
+    "moment": "^2.18.1",
+    "sequelize": "^3.30.4",
+    "sqlite3": "^3.1.8"
   }
 }
